fix viewport overflow

--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ body {
   font-size: 11.2rem;
   color: var(--purple);
   text-align: center;
+  transition: width 0.3s ease;
 }
 .inverse {
   color: var(--off-white-dark);
@@ -53,6 +54,7 @@ body {
   text-align: center;
   width: 80%;
   color: #333;
+  transition: width 0.3s ease;
 }
 .phone-container {
   position: relative;
@@ -149,5 +151,58 @@ body {
   }
   .logo {
     width: clamp(100px, 8vw, 150px);
+  }
+  .submit-button {
+    transform: scale(1.2);
+    margin: 0 auto;
+    margin-top: 5px;
+  }
+}
+
+@media (max-width: 450px) {
+  .hero-heading {
+    font-size: 4rem;
+    margin: -0.5rem 0 0rem 0;
+  }
+  .hero-subheading {
+    font-size: 1.2rem;
+    margin: -0.6rem 0 0rem 0;
+  }
+  .phone-container {
+    width: 400px;
+    margin: 0 0 1rem 0;
+    transform: scale(0.9);
+  }
+  .logo {
+    width: clamp(80px, 6vw, 130px);
+  }
+  .submit-button {
+    transform: scale(1.3);
+    margin: 0 auto;
+    margin-top: 5px;
+  }
+}
+
+@media (max-width: 450px) {
+  .hero-heading {
+    font-size: 4rem;
+    margin: -0.5rem 0 0rem 0;
+  }
+  .hero-subheading {
+    font-size: 1.2rem;
+    margin: -0.6rem 0 0rem 0;
+  }
+  .phone-container {
+    width: 400px;
+    margin: 0 0 1rem 0;
+    transform: scale(0.9);
+  }
+  .logo {
+    width: clamp(80px, 6vw, 130px);
+  }
+  .submit-button {
+    transform: scale(1.3);
+    margin: 0 auto;
+    margin-top: 5px;
   }
 }
